src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_a_folded_repository.snap
---
source: src/ui/render.rs
expression: screen(&state)
---
" Panes   Branches                                                       "
"▸ me/app                                                        /src/app"
"▾ me/site                                                               "
"  ● develop                                                    /src/site"
"    ◆ claude                                                       w3:p1"
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"press / to filter                                                       "
"↵ jump  n new pane  ⇥ branches  / filter  h other  r reload  q quit     "
