src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_a_folded_repository_with_the_caret_turned.snap
---
source: src/ui/render.rs
expression: "screen(&state, 92, 14)"
---
"┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"│ / search panes                                                                   5 panes │"
"│──────────────────────────────────────────────────────────────────────────────────────────│"
"│ ◆ ▸ ● me/app (3)                                              1 working · 1 idle         │"
"│                                                                                          │"
"│   ▾ ● me/site (1)                                             1 blocked                  │"
"│   └── ● develop                                               1 pane · 1 blocked         │"
"│      └── ● claude                                             claude · blocked           │"
"│                                                                                          │"
"│                                                                                          │"
"│                                                                                          │"
"│ me/app · 3 worktrees · 3 panes · /src/app ───────────────────────────────────────────────│"
"│ ↵ jump  n new pane  ⇥ branches  / search  b/w/i/d/a states  h other  r reload  esc close │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
