src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_a_spinner_beside_whatever_it_is_waiting_for.snap
---
source: src/ui/render.rs
expression: "branches_screen(&state, 110, 8)"
---
" / search branches  ⠙ fetching origin…                                                 ⇅ state ↓   5 branches "
"──────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"   ● feat/login   running      #123 Add the login screen (draft)                                             █"
"   ○ fix/crash    checked out  latest work on fix/crash                                                      █"
"   · main         local        latest work on main                                                           █"
"   · chore/deps   local        latest work on chore/deps                                                     │"
" me/app · feat/login · open in w2:p1 · /wt/feat-login · #123 Add the login screen (draft) ────────────────────"
" ↵ choose  j/k move  / search  f fetch  i order  shift+i reverse  ⇥ panes  esc back  q close                  "
