src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_a_state_filter_as_a_chip_in_the_search_line.snap
---
source: src/ui/render.rs
expression: "screen(&state, 92, 12)"
---
" / ● blocked                                                                        5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"   ● me/site (1)                                                                            "
"   └── ● develop      /wt/develop                                                           "
"      └── ● claude    w3:p1                                                                 "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
" me/site · develop · w3:p1 · blocked · /wt/develop ─────────────────────────────────────────"
" ↵ jump  n new pane  ⇥ branches  / search  b/w/i/d/a states  h other  r reload  esc close   "
