src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_branches_in_the_same_panel_as_the_panes_view.snap
---
source: src/ui/render.rs
expression: "branches_screen(&branches_state(), 92, 12)"
---
"┌──────────────────────────────────────────────────────────────────────────────────────────┐"
"│ / search branches█                                                            5 branches │"
"│──────────────────────────────────────────────────────────────────────────────────────────│"
"│   ● feat/login   running      #123 Add the login screen (draft)                          │"
"│   ○ fix/crash    checked out  latest work on fix/crash                                   │"
"│   · main         local        latest work on main                                        │"
"│   · chore/deps   local        latest work on chore/deps                                  │"
"│   ↓ feat/search  remote                                                                  │"
"│                                                                                          │"
"│ me/app · feat/login · open in w2:p1 · /wt/feat-login · #123 Add the login screen (draft) │"
"│ type to filter  ↵ choose  ⇥ panes  ctrl+u clear  esc close                               │"
"└──────────────────────────────────────────────────────────────────────────────────────────┘"
