src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_branches_with_their_state_and_pull_request.snap
---
source: src/ui/render.rs
expression: branches_screen(&branches_state())
---
" Panes   Branches                                                             "
"● feat/login   running      #123 Add the login screen (draft)                 "
"○ fix/crash    checked out  latest work on fix/crash                          "
"· main         local        latest work on main                               "
"· chore/deps   local        latest work on chore/deps                         "
"↓ feat/search  remote                                                         "
"                                                                              "
"                                                                              "
"                                                                              "
"                                                                              "
"❯ █                                                                           "
"type to filter  ↵ choose  ⇥ panes  esc quit                                   "
