src/ui/snapshots/herdr_gh_nav__ui__render__tests__draws_nothing_matching_without_losing_the_chrome.snap
---
source: src/ui/render.rs
expression: "screen(&state, 92, 10)"
---
" / zzzz█                                                                            5 panes "
"────────────────────────────────────────────────────────────────────────────────────────────"
"nothing matches                                                                             "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"                                                                                            "
"────────────────────────────────────────────────────────────────────────────────────────────"
" ↵ keep search  ctrl+u clear  esc cancel  ↑↓ move                                           "
